chore: update Java to 25, bump OpenJFX to 25.0.1 and update dependencies